# dd_ftp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v0.3.0-phase3.md  RELEASE_NOTES_v0.4.0-phase4.md  THEME_STRUCTURE_STANDARD.md  dd_ftp_theme.yml  install.sh
.kilo/plans/: 1775484619554-neon-nebula.md
crates/dd_ftp_app/: Cargo.toml
crates/dd_ftp_app/src/: actions.rs  lib.rs  reducer.rs  state.rs
crates/dd_ftp_cli/: Cargo.toml
crates/dd_ftp_cli/src/: main.rs
crates/dd_ftp_core/: Cargo.toml
crates/dd_ftp_core/src/: connection.rs  error.rs  filesystem.rs  lib.rs  traits.rs  transfer.rs
crates/dd_ftp_ftp/: Cargo.toml
crates/dd_ftp_ftp/src/: lib.rs
crates/dd_ftp_protocols/: Cargo.toml
crates/dd_ftp_protocols/src/: ftp.rs  ftps.rs  lib.rs  sftp.rs
crates/dd_ftp_storage/: Cargo.toml
crates/dd_ftp_storage/src/: lib.rs  secrets.rs  site_manager.rs
crates/dd_ftp_transfer/: Cargo.toml
crates/dd_ftp_transfer/src/: lib.rs  queue.rs
crates/dd_ftp_ui/: Cargo.toml
crates/dd_ftp_ui/src/: lib.rs  render.rs  theme.rs
crates/dd_ftp_utils/: Cargo.toml
crates/dd_ftp_utils/src/: logging.rs
