[package]
name = "dd_ftp_ftp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async_ftp.workspace = true
dd_ftp_core = { path = "../dd_ftp_core" }
tokio.workspace = true
tokio-rustls.workspace = true
webpki-roots.workspace = true
