[package]
name = "dd_ftp_protocols"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
dd_ftp_core = { path = "../dd_ftp_core" }
ssh2.workspace = true
tokio.workspace = true
